# artik-sdk

./: .gitignore  CMakeLists.txt  Make.defs  Makefile
cmake/: FindZigbee.cmake
debian/: changelog  control  libartik-sdk-coap-dev.install  libartik-sdk-coap.install  libartik-sdk-examples.install  rules
doc/: Doxyfile  changelog.dox  mainpage.dox
examples/adc/: CMakeLists.txt  artik_adc_example.c
examples/bluetooth/: CMakeLists.txt  artik_bluetooth_example.c
examples/cloud/: CMakeLists.txt  artik_cloud_example.c
examples/coap/: CMakeLists.txt  artik_coap_example.c
examples/gpio/: CMakeLists.txt  artik_gpio_example.c
examples/http/: CMakeLists.txt  artik_http_example.c
examples/i2c/: CMakeLists.txt  artik_i2c_example.c
examples/loop/: CMakeLists.txt  artik_loop_example.c
examples/lwm2m/: CMakeLists.txt  artik_lwm2m_example.c
examples/media/: CMakeLists.txt  artik_media_example.c
examples/module/: CMakeLists.txt  artik_module_example.c
examples/mqtt/: CMakeLists.txt  artik_mqtt_example.c
examples/network/: CMakeLists.txt  artik_network_example.c
examples/pwm/: CMakeLists.txt  artik_pwm_example.c
examples/sdr/: CMakeLists.txt  artik_sdr_example.c
examples/security/: CMakeLists.txt
examples/security/pkcs7_sig_verify/: CMakeLists.txt
examples/security/security_certificate/: CMakeLists.txt  artik_security_certificate.c
examples/security/security_info/: CMakeLists.txt  artik_security_example.c
examples/security/security_key/: CMakeLists.txt  artik_security_key.c
examples/security/security_storage/: CMakeLists.txt  artik_security_storage.c
examples/sensor/: CMakeLists.txt  artik_sensor_example.c
examples/serial/: CMakeLists.txt  artik_serial_example.c
examples/spi/: CMakeLists.txt  artik_spi_example.c
examples/time/: CMakeLists.txt  artik_time_example.c
examples/websocket/: CMakeLists.txt  artik_websocket_example.c
examples/wifi/: CMakeLists.txt  artik_wifi_example.c
examples/zigbee/: CMakeLists.txt  artik_zigbee_common.c  artik_zigbee_example.c
inc/base/: artik_error.h  artik_list.h  artik_loop.h  artik_module.h  artik_platform.h  artik_security.h  artik_ssl.h  artik_time.h  artik_utils.h
inc/bluetooth/: artik_bluetooth.h
inc/coap/: artik_coap.h
inc/connectivity/: artik_cloud.h  artik_network.h  artik_websocket.h
inc/lwm2m/: artik_lwm2m.h
inc/mqtt/: artik_mqtt.h
pkgconfig/: libartik-sdk-base.pc.cmake  libartik-sdk-bluetooth.pc.cmake  libartik-sdk-coap.pc.cmake  libartik-sdk-connectivity.pc.cmake  libartik-sdk-lwm2m.pc.cmake  libartik-sdk-media.pc.cmake  libartik-sdk-mqtt.pc.cmake  libartik-sdk-sensor.pc.cmake  libartik-sdk-systemio.pc.cmake  libartik-sdk-wifi.pc.cmake  libartik-sdk-zigbee.pc.cmake
scripts/: update_version.sh
specs/: libartik-sdk.spec
src/modules/: CMakeLists.txt
src/modules/base/: CMakeLists.txt
src/modules/base/log/: artik_log.c  linux_log.c  tizenrt_log.c
src/modules/base/loop/: linux_loop.c
src/modules/base/module/: artik_module.c  linux_module.c  os_module.h  tinyara_module.c  tizenrt_module.c
src/modules/base/module/cpp/: artik_module.cpp
src/modules/base/security/: artik_security.c  linux_security.c  linux_security.h  os_security.h  tinyara_security.c  tizenrt_security.c
src/modules/base/security/cpp/: artik_security.cpp
src/modules/base/security/tizenrt/: mbedtls_pkcs7_parser.c  tizenrt_security.h
src/modules/base/time/: artik_time.c  linux_time.c  os_time.h  tizenrt_time.c
src/modules/base/time/cpp/: artik_time.cpp
src/modules/base/utils/: CMakeLists.txt  artik_utils.c  linux_utils.c  os_utils.h  tizenrt_utils.c
src/modules/base/utils/cpp/: artik_uri.cpp
src/modules/bluetooth/: artik_bluetooth.c  os_bluetooth.h
src/modules/bluetooth/cpp/: artik_bluetooth.cpp
src/modules/bluetooth/linux/: a2dp.c  a2dp.h  advertisement.c  agent.c  avrcp.c  avrcp.h  bt.c  core.c  core.h  device.c  ftp.c  ftp.h  gatt.c  gatt_server.c  linux_bluetooth.c  pan.c  spp.c
src/modules/coap/: CMakeLists.txt  artik_coap.c  os_coap.h
src/modules/coap/cpp/: artik_coap.cpp
src/modules/coap/linux/: coap_list.c  coap_list.h  linux_coap.c
src/modules/coap/tizenrt/: coap.c  coap.h  coap_address.c  coap_address.h  coap_block.c  coap_block.h  coap_dtls.c  coap_dtls.h  coap_mem.c  coap_mem.h  coap_memtrace.c  coap_resource.c  coap_resource.h  coap_session.c  coap_session.h  coap_socket.c  coap_socket.h  coap_subscribe.c  coap_subscribe.h  coap_time.c  coap_time.h  coap_uri.c  coap_uri.h  hashkey.c  hashkey.h  prng.h  tizenrt_coap.c
src/modules/connectivity/: CMakeLists.txt
src/modules/connectivity/cloud/: artik_cloud.c
src/modules/connectivity/cloud/cpp/: artik_cloud.cpp
src/modules/connectivity/http/: common_http.c  linux_http.c  tizenrt_http.c
src/modules/connectivity/http/tinyara/: webclient.c
src/modules/connectivity/http/tizenrt/: tizenrt_http.h  webclient.c
src/modules/connectivity/network/: artik_network.c  common_network.c  common_network.h  linux_network.c  os_network.h  tizenrt_network.c
src/modules/connectivity/network/cpp/: artik_network.cpp
src/modules/connectivity/network/tizenrt/: dns_utils.c
src/modules/connectivity/websocket/: artik_websocket.c  linux_websocket.c  os_websocket.h  tizenrt_websocket.c
src/modules/connectivity/websocket/cpp/: artik_websocket.cpp
src/modules/lwm2m/: CMakeLists.txt  linux_lwm2m.c  tizenrt_lwm2m.c
src/modules/lwm2m/cpp/: artik_lwm2m.cpp
src/modules/mqtt/linux/: mqtt_client.c
src/modules/systemio/adc/: tizenrt_adc.c
src/modules/systemio/gpio/: tizenrt_gpio.c
src/modules/systemio/i2c/: tizenrt_i2c.c
src/modules/systemio/pwm/: linux_pwm.c  tizenrt_pwm.c
src/modules/systemio/serial/: linux_serial.c  tizenrt_serial.c
src/modules/systemio/spi/: linux_spi.c  tizenrt_spi.c
src/modules/wifi/linux/: linux_wifi.c  wifi.c
src/modules/wifi/linux/wpas/: eloop.c
src/modules/wifi/tizenrt/: tizenrt_wifi.c
src/modules/zigbee/: CMakeLists.txt  dummy_zigbee.c
src/modules/zigbee/linux/: linux_zigbee.c
test/security_test/: CMakeLists.txt  artik_security_test.c  pkcs7_sig_verify.c
test/zigbee_test/: CMakeLists.txt
(+58 files in other folders)
