CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( zigbee-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikZigbee )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter -Wno-empty-body" )

SET ( EXE_ZIGBEE_EXAMPLE zigbee-example )

SET ( SRC_EXAMPLE_ZIGBEE	artik_zigbee_example.c
						artik_zigbee_common.c
)

ADD_EXECUTABLE		( ${EXE_ZIGBEE_EXAMPLE} ${SRC_EXAMPLE_ZIGBEE} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ZIGBEE_EXAMPLE}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_ZIGBEE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_ZIGBEE_EXAMPLE}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_ZIGBEE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_ZIGBEE_EXAMPLE} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/examples" )
