CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( security-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SECURITY_TEST security-test )

SET ( SRC_TEST_SECURITY	artik_security_test.c )

ADD_EXECUTABLE		( ${EXE_SECURITY_TEST} ${SRC_TEST_SECURITY} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_SECURITY_TEST}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_TEST}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SECURITY_TEST} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/tests" )
