CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( zigbee-test )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikZigbee )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter -Wno-empty-body" )

SET ( EXE_ZIGBEE_CLI zigbee-cli )

SET ( SRC_ZIGBEE_CLI	artik_zigbee_cli.c
)

ADD_EXECUTABLE		( ${EXE_ZIGBEE_CLI} ${SRC_ZIGBEE_CLI} )

TARGET_INCLUDE_DIRECTORIES ( ${EXE_ZIGBEE_CLI}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
								PUBLIC ${ARTIK_ZIGBEE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_ZIGBEE_CLI}
								${ARTIK_BASE_LIBRARIES}
								${ARTIK_ZIGBEE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_ZIGBEE_CLI} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/tests" )
