CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT		  	( pkcs7-sig-verify )

FIND_PACKAGE ( ArtikBase )
FIND_PACKAGE ( ArtikConnectivity )

SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_PKCS7_SIG_VERIFY pkcs7-sig-verify )

SET ( SRC_PKCS7_SIG_VERIFY pkcs7_sig_verify.c )

ADD_EXECUTABLE		( ${EXE_PKCS7_SIG_VERIFY} ${SRC_PKCS7_SIG_VERIFY} )


TARGET_INCLUDE_DIRECTORIES ( ${EXE_PKCS7_SIG_VERIFY}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_PKCS7_SIG_VERIFY}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_PKCS7_SIG_VERIFY} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/examples" )
