CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( security-key )

FIND_PACKAGE ( ArtikBase )

#SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SECURITY_CERTIFICATE security-certificate )

SET ( SRC_SECURITY_CERTIFICATE artik_security_certificate.c )

ADD_EXECUTABLE		( ${EXE_SECURITY_CERTIFICATE} ${SRC_SECURITY_CERTIFICATE} )


TARGET_INCLUDE_DIRECTORIES ( ${EXE_SECURITY_CERTIFICATE}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_CERTIFICATE}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SECURITY_CERTIFICATE} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/examples" )
