CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( security-key )

FIND_PACKAGE ( ArtikBase )

#SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SECURITY_KEY security-key )

SET ( SRC_SECURITY_KEY artik_security_key.c )

ADD_EXECUTABLE		( ${EXE_SECURITY_KEY} ${SRC_SECURITY_KEY} )


TARGET_INCLUDE_DIRECTORIES ( ${EXE_SECURITY_KEY}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_KEY}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SECURITY_KEY} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/examples" )
