CMAKE_MINIMUM_REQUIRED	( VERSION 2.8 )
PROJECT			( security-key )

FIND_PACKAGE ( ArtikBase )

#SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter" )

SET ( EXE_SECURITY_STORAGE security-storage )

SET ( SRC_SECURITY_STORAGE artik_security_storage.c )

ADD_EXECUTABLE		( ${EXE_SECURITY_STORAGE} ${SRC_SECURITY_STORAGE} )


TARGET_INCLUDE_DIRECTORIES ( ${EXE_SECURITY_STORAGE}
								PUBLIC ${ARTIK_BASE_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES	( ${EXE_SECURITY_STORAGE}
								${ARTIK_BASE_LIBRARIES}
)

INSTALL ( TARGETS ${EXE_SECURITY_STORAGE} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBDIR}/artik-sdk/examples" )
